[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/scenes/framework/sprite_trail_emitter/SpriteTrailEmitter.gd" type="Script" id=1]
[ext_resource path="res://src/scenes/framework/sprite_trail_emitter/TrailSprite.gd" type="Script" id=2]

[node name="SpriteTrailEmitter" type="Node2D"]
script = ExtResource( 1 )

[node name="TrailSprite" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="DeletionTimer" type="Timer" parent="TrailSprite"]
one_shot = true

[node name="Tween" type="Tween" parent="TrailSprite"]

[connection signal="timeout" from="TrailSprite/DeletionTimer" to="TrailSprite" method="_on_DeletionTimer_timeout"]
